--- a/index.qmd
+++ b/index.qmd
@@ -46,6 +46,6 @@ This page displays an outline of the topics, content, and assignments for the co
 | 2.4                                         | `r advdate2(wed,1)`  | `r advdate(wed,1)`  | Websites and Blogs                                   |                          [📖](https://quarto.org/docs/websites/ "Creating a Website") [📖](https://quarto.org/docs/websites/website-blog.html "Creating a Blog")                          |                                                                      🖥️ [🖥️](https://youtu.be/t8qtcDyCRFA?si=Zbwd0Ydx5pIWrkMW "Create & Publish a Quarto Blog")                                                                       |                                                                                                                          |
 | 2.4                                         | `r advdate2(thur,1)` | `r advdate(thur,1)` | Working with PDF documents                           |                                                         [📖](https://quarto.org/docs/output-formats/pdf-basics.html "PDF Basics")                                                         |                                                                                                                  🖥️                                                                                                                   |                                                                                                                          |
 |                                             |                      |                     |                                                      |                                                                                                                                                                                           |                                                                                                                                                                                                                                       |                                                                                                                          |
-| 2.5                                         | `r advdate2(fri,1)`  | `r advdate(fri,1)`  | Parameters                                           |          [📖](https://quarto.org/docs/computations/parameters.html "Parameters in Quarto") [📖](https://book.rwithoutstatistics.com/parameterized-reports-chapter "rwos, ch. 7")          |                                                                      [🖥️](https://www.youtube.com/watch?v=GAshEkcp7kQ "Learn How Parameterized Reporting Works")                                                                      |                                                                                                                          |
+| 2.5                                         | `r advdate2(fri,1)`  | `r advdate(fri,1)`  | Parameterized Reporting                              |          [📖](https://quarto.org/docs/computations/parameters.html "Parameters in Quarto") [📖](https://book.rwithoutstatistics.com/parameterized-reports-chapter "rwos, ch. 7")          |                                                                      [🖥️](https://www.youtube.com/watch?v=GAshEkcp7kQ "Learn How Parameterized Reporting Works")                                                                      |                                                                                                                          |
 | [WS-2](/weeks/workshop-day2.html "Day 2")   | `r advdate2(sat,1)`  | `r advdate(sat,1)`  | [*See workshop schedule*](/weeks/workshop-day2.html) |                                                                                                                                                                                           |                                                                                                                                                                                                                                       | [🧮](/assignments/coding-assignment-2.html "Coding assignment 2") [✍️](/project/project-assignment.html "Final project") |
 :::
