--- a/index.qmd
+++ b/index.qmd
@@ -41,10 +41,10 @@ This page displays an outline of the topics, content, and assignments for the co
 | [1.4](/modules/module-1.4.qmd "Module 1.4") | `r advdate2(thur,0)` | `r advdate(thur,0)` | Visualizing data with `ggplot2`                      | [📖](https://r4ds.hadley.nz/data-import "r4ds, ch. 7") [📖](https://r4ds.hadley.nz/data-visualize.html "r4ds, ch. 1") [📖](https://r4ds.hadley.nz/communication.html#labels "r4ds, 12.2") |                                                             [🖥️](https://youtu.be/QG1oDJPoIio "Make a Bar Chart") [🖥️](https://youtu.be/PnmQ2MFQpIc "Make a Line Chart")                                                              |                                                                                                                          |
 | [1.5](/modules/module-1.5.qmd "Module 1.5") | `r advdate2(fri,0)`  | `r advdate(fri,0)`  | Making and publishing HTML documents                 |                 [📖](https://quarto.org/docs/output-formats/html-basics.html "HTML Basics") [📖](https://quarto.org/docs/output-formats/html-themes.html "HTML Theming")                  |                                                                      [🖥️](https://youtu.be/l-AQ4yAQXy0?si=-ow4C9H6nbMCki0c "Create and Publish HTML Documents")                                                                       |                                                                                                                          |
 | [WS-1](/weeks/workshop-day1.html "Day 1")   | `r advdate2(sat,0)`  | `r advdate(sat,0)`  | [*See workshop schedule*](/weeks/workshop-day1.html) |                                                                                                                                                                                           |                                                                                                                                                                                                                                       |                            [🧮](/assignments/coding-assignment-1.html "Coding assignment 1")                             |
-| 2.1                                         | `r advdate2(mon,1)`  | `r advdate(mon,1)`  | An introduction to data transformation               |                                                                 [📖](https://r4ds.hadley.nz/data-transform "r4ds, ch. 3")                                                                 |                                                                                [🖥️](https://youtu.be/ScQD47eJeAE "Transforming Data with dplyr Verbs")                                                                                |                                                                                                                          |
-| 2.2                                         | `r advdate2(tues,1)` | `r advdate(tues,1)` | Revealjs slides                                      |                                                             [📖](https://quarto.org/docs/presentations/revealjs/ "Revealjs")                                                              |                                                                                 [🖥️](https://www.youtube.com/watch?v=SAi8-P49F2Y&t=854s "Slidecraft")                                                                                 |                                                                                                                          |
-| 2.4                                         | `r advdate2(wed,1)`  | `r advdate(wed,1)`  | Websites and Blogs                                   |                          [📖](https://quarto.org/docs/websites/ "Creating a Website") [📖](https://quarto.org/docs/websites/website-blog.html "Creating a Blog")                          |                                                                      🖥️ [🖥️](https://youtu.be/t8qtcDyCRFA?si=Zbwd0Ydx5pIWrkMW "Create & Publish a Quarto Blog")                                                                       |                                                                                                                          |
-| 2.4                                         | `r advdate2(thur,1)` | `r advdate(thur,1)` | Working with PDF documents                           |                                                         [📖](https://quarto.org/docs/output-formats/pdf-basics.html "PDF Basics")                                                         |                                                                                                                  🖥️                                                                                                                   |                                                                                                                          |
-| 2.5                                         | `r advdate2(fri,1)`  | `r advdate(fri,1)`  | Parameterized Reporting                              |          [📖](https://quarto.org/docs/computations/parameters.html "Parameters in Quarto") [📖](https://book.rwithoutstatistics.com/parameterized-reports-chapter "rwos, ch. 7")          |                                                                      [🖥️](https://www.youtube.com/watch?v=GAshEkcp7kQ "Learn How Parameterized Reporting Works")                                                                      |                                                                                                                          |
+| [2.1](/modules/module-2.1.qmd "Module 2.1") | `r advdate2(mon,1)`  | `r advdate(mon,1)`  | An introduction to data transformation               |                                                                 [📖](https://r4ds.hadley.nz/data-transform "r4ds, ch. 3")                                                                 |                                                                                [🖥️](https://youtu.be/ScQD47eJeAE "Transforming Data with dplyr Verbs")                                                                                |                                                                                                                          |
+| [2.2](/modules/module-2.2.qmd "Module 2.2") | `r advdate2(tues,1)` | `r advdate(tues,1)` | Revealjs slides                                      |                                                             [📖](https://quarto.org/docs/presentations/revealjs/ "Revealjs")                                                              |                                                                                 [🖥️](https://www.youtube.com/watch?v=SAi8-P49F2Y&t=854s "Slidecraft")                                                                                 |                                                                                                                          |
+| [2.3](/modules/module-2.3.qmd "Module 2.3") | `r advdate2(wed,1)`  | `r advdate(wed,1)`  | Websites and Blogs                                   |                          [📖](https://quarto.org/docs/websites/ "Creating a Website") [📖](https://quarto.org/docs/websites/website-blog.html "Creating a Blog")                          |                                                                        [🖥️](https://youtu.be/t8qtcDyCRFA?si=Zbwd0Ydx5pIWrkMW "Create & Publish a Quarto Blog")                                                                        |                                                                                                                          |
+| [2.4](/modules/module-2.4.qmd "Module 2.4") | `r advdate2(thur,1)` | `r advdate(thur,1)` | Working with PDF documents                           |                                                         [📖](https://quarto.org/docs/output-formats/pdf-basics.html "PDF Basics")                                                         |                                                                                                                  🖥️                                                                                                                   |                                                                                                                          |
+| [2.5](/modules/module-2.5.qmd "Module 2.5") | `r advdate2(fri,1)`  | `r advdate(fri,1)`  | Parameterized Reporting                              |          [📖](https://quarto.org/docs/computations/parameters.html "Parameters in Quarto") [📖](https://book.rwithoutstatistics.com/parameterized-reports-chapter "rwos, ch. 7")          |                                                                      [🖥️](https://www.youtube.com/watch?v=GAshEkcp7kQ "Learn How Parameterized Reporting Works")                                                                      |                                                                                                                          |
 | [WS-2](/weeks/workshop-day2.html "Day 2")   | `r advdate2(sat,1)`  | `r advdate(sat,1)`  | [*See workshop schedule*](/weeks/workshop-day2.html) |                                                                                                                                                                                           |                                                                                                                                                                                                                                       | [🧮](/assignments/coding-assignment-2.html "Coding assignment 2") [✍️](/project/project-assignment.html "Final project") |
 :::
