--- a/modules/module-1.2.qmd
+++ b/modules/module-1.2.qmd
@@ -1,6 +1,9 @@
 ---
 title: "Writing in Markdown"
-format: html
+format: 
+  html:
+    code-link: true
+highlight-style: atom-one
 execute: 
   echo: true
   message: false
