--- a/modules/module-1.3.qmd
+++ b/modules/module-1.3.qmd
@@ -1,7 +1,10 @@
 ---
 title: "Coding in R"
 subtitle: "A Gentle Introduction"
-format: html
+format: 
+  html:
+    code-link: true
+highlight-style: atom-one
 execute: 
   echo: true
   message: false
