--- a/weeks/workshop-day2.qmd
+++ b/weeks/workshop-day2.qmd
@@ -15,7 +15,7 @@ format: html
 
 ## Sessions
 
-- 9:00 - 10:30: [Advanced HTML]()
+- 9:00 - 10:30: [Advanced HTML](/slides/session-2.1.qmd)
 - 10:30 - 11:00: Break
 - 11:00 - 12:30: [Working with PDFs]()
 - 12:30 - 1:30: Lunch
