--- a/weeks/workshop-day2.qmd
+++ b/weeks/workshop-day2.qmd
@@ -15,11 +15,11 @@ format: html
 
 ## Sessions
 
-- 9:00 - 10:30: [Advanced HTML](/slides/session-2.1.qmd)
+- 9:00 - 10:30: [Revealjs Slides](/slides/session-2.1.qmd)
 - 10:30 - 11:00: Break
-- 11:00 - 12:30: [Working with PDFs]()
+- 11:00 - 12:30: [Blogs and Websites]()
 - 12:30 - 1:30: Lunch
-- 1:30 - 3:00: [Transforming Data]()
+- 1:30 - 3:00: [Working with PDFs]()
 - 3:00 - 3:30: Break
 - 3:30 - 5:00 [Parameterized Reporting]() with David Keyes
 
