--- a/weeks/workshop-day2.qmd
+++ b/weeks/workshop-day2.qmd
@@ -17,11 +17,11 @@ format: html
 
 - 9:00 - 10:30: [Revealjs Slides](/slides/session-2.1.qmd)
 - 10:30 - 11:00: Break
-- 11:00 - 12:30: [Blogs and Websites]()
+- 11:00 - 12:30: [Blogs and Websites](/slides/session-2.2.qmd)
 - 12:30 - 1:30: Lunch
 - 1:30 - 3:00: [Working with PDFs]()
 - 3:00 - 3:30: Break
-- 3:30 - 5:00 [Parameterized Reporting](/slides/session-2.5.qmd) with David Keyes
+- 3:30 - 5:00 [Parameterized Reporting](/slides/session-2.4.qmd) with David Keyes
 
 ## Assignments
 
