--- a/weeks/workshop-day2.qmd
+++ b/weeks/workshop-day2.qmd
@@ -19,7 +19,7 @@ format: html
 - 10:30 - 11:00: Break
 - 11:00 - 12:30: [Blogs and Websites](/slides/session-2.2.qmd)
 - 12:30 - 1:30: Lunch
-- 1:30 - 3:00: [Working with PDFs]()
+- 1:30 - 3:00: [Working with PDFs](/slides/session-2.3.qmd)
 - 3:00 - 3:30: Break
 - 3:30 - 5:00 [Parameterized Reporting](/slides/session-2.4.qmd) with David Keyes
 
